--- a/index.html
+++ b/index.html
@@ -15,39 +15,34 @@
     <body>
         <div class="header">
             <div class="left-section">
-                <img class="hamburger-menu" src="hamburger-menu.svg" alt="">
-                <img class="youtube-logo" src="youtube-logo.svg" alt="">
+                <img class="hamburger-menu" src="svgs\hamburger-menu.svg" alt="">
+                <img class="youtube-logo" src="svgs\youtube-logo.svg" alt="">
             </div>
             <div class="middle-section">
                 <input class = "searchbar" type="text" placeholder="Search">
                 <button class="search-button">
-                    <img src="search.svg" alt="">
+                    <img class="search-icon" src="svgs/search.svg" alt="">
                 </button>
                 <button class="voice-search-button">
-                    <img src="voice-search-icon.svg" alt="">
+                    <img src="svgs\voice-search-icon.svg" alt="">
                 </button>
             </div>
             <div class="right-section">
-                <div class="tooltip-container">
-                    <button>
-                        <img src="upload.svg" alt="">
-                    </button>
-                </div>
-                <div class="tooltip-container">
-                    <button>
-                        <img src="youtube-apps.svg" alt="">
-                    </button>
-                </div>
-                <div class="tooltip-container">
-                    <button>
-                        <img src="notifications.svg" alt="">
-                    </button>
-                </div>
-                <div class="owner-channel-img">
-                    <button>
-                        <img src="notifications.svg" alt="">
-                    </button>
-                </div>
+                <button>
+                    <img class="upload-icon" src="svgs\upload.svg" alt="">
+                </button>
+
+                <button>
+                    <img class="youtube-apps-icon" src="svgs\youtube-apps.svg" alt="">
+                </button>
+
+                <button> 
+                    <img class="notifications-icon" src="svgs\notifications.svg" alt="">
+                </button>
+
+                <button>
+                    <img class="current-user-picture" src="pfp\channel-1.jpeg" alt="">
+                </button>
             </div>
         </div>
         
