--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="youtubeclone.css">
         <link rel="stylesheet" href="youtubegeneral.css">
         <link rel="stylesheet" href="youtubeheader.css">
-
+        <link rel="stylesheet" href="sidebar.css">
     
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,28 +28,29 @@
                 </button>
             </div>
             <div class="right-section">
-                <button>
                     <img class="upload-icon" src="svgs\upload.svg" alt="">
-                </button>
 
-                <button>
                     <img class="youtube-apps-icon" src="svgs\youtube-apps.svg" alt="">
-                </button>
 
-                <button> 
-                    <img class="notifications-icon" src="svgs\notifications.svg" alt="">
-                </button>
+                    <div class="notifications-icon-container">
+                        <img class="notifications-icon" src="svgs\notifications.svg" alt="">
+                        <div class="notifications-count">3</div>
+                    </div>
 
-                <button>
                     <img class="current-user-picture" src="pfp\channel-1.jpeg" alt="">
-                </button>
+
             </div>
+        </div>
+
+        <div class="sidebar">
+            sidebar
         </div>
         
         <div class="video-grid" style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-gap: 15px; row-gap: 40px;">
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-1.webp">
+                    <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -65,6 +66,7 @@
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-2.webp">
+                    <div class="video-time">8:22</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -80,6 +82,7 @@
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-3.webp">
+                    <div class="video-time">9:13</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -95,6 +98,7 @@
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-4.webp">
+                    <div class="video-time">22:09</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -110,6 +114,7 @@
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-5.webp">
+                    <div class="video-time">11:17</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -125,6 +130,7 @@
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-6.webp">
+                    <div class="video-time">19:59</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -140,6 +146,7 @@
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-7.webp">
+                    <div class="video-time">10:13</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -155,6 +162,7 @@
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-8.webp">
+                    <div class="video-time">7:12</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -170,6 +178,7 @@
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-9.webp">
+                    <div class="video-time">13:17</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -185,6 +194,7 @@
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-10.webp">
+                    <div class="video-time">7:53</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -200,6 +210,7 @@
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-11.webp">
+                    <div class="video-time">4:10</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -215,6 +226,7 @@
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class = "thumbnail-1" src = "thumbnails/thumbnail-12.webp">
+                    <div class="video-time">4:51</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
