--- a/index.html
+++ b/index.html
@@ -43,7 +43,25 @@
         </div>
 
         <div class="sidebar">
-            sidebar
+            <div class="sidebar-link">
+                <img src="images/home.svg">Home
+            </div>
+            <div class="sidebar-link">
+                <img src="images/explore.svg">Explore
+            </div>
+            <div class="sidebar-link">
+                <img src="images/subscriptions.svg">Subscriptions
+            </div>
+            <div class="sidebar-link">
+                <img src="images/originals.svg">Originals
+            </div>
+            <div class="sidebar-link">
+                <img src="images/youtube-music.svg">YouTube Music
+            </div>
+            <div class="sidebar-link">
+                <img src="images/library.svg">Library
+            </div>
+            
         </div>
         
         <div class="video-grid" style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-gap: 15px; row-gap: 40px;">
@@ -57,7 +75,7 @@
                         <img class="pfp-picture" src="pfp/channel-1.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Tech and AI with Google CEO Sundar Pichai!</strong> </p>
+                        <p class="video-title"><strong>Talking Tech and AI with Google CEO Sundar Pichai!</strong> </p>
                         <p class="video-author">Marques Brownlee</p>
                         <p class="video-stats">3.4M views &#183; 6 months ago</p>
                     </div>
@@ -73,7 +91,7 @@
                         <img class="pfp-picture" src="pfp/channel-2.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Not To Laugh Challenge #9</strong></p>
+                        <p class="video-title"><strong>Try Not To Laugh Challenge #9</strong></p>
                         <p class="video-author">Markiplier</p>
                         <p class="video-stats">19M views &#183; 4 years ago</p>
                     </div>
@@ -89,9 +107,9 @@
                         <img class="pfp-picture" src="pfp/channel-3.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Tech and AI with Google CEO Sundar Pichai!</strong> </p>
-                        <p class="video-author">Marques Brownlee</p>
-                        <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                        <p class="video-title"><strong>Crazy Tik Toks Taken Moments Before DISASTER</strong> </p>
+                        <p class="video-author">SSSniperWolf</p>
+                        <p class="video-stats">12M views &#183; 1 year ago</p>
                     </div>
                 </div>
             </div>
@@ -105,9 +123,9 @@
                         <img class="pfp-picture" src="pfp/channel-4.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Not To Laugh Challenge #9</strong></p>
-                        <p class="video-author">Markiplier</p>
-                        <p class="video-stats">19M views &#183; 4 years ago</p>
+                        <p class="video-title"><strong>The Simplest Math Problem No One Can Solve - Collatz Conjecture</strong></p>
+                        <p class="video-author">Veritasium</p>
+                        <p class="video-stats">18M views  &#183; 4 months ago</p>
                     </div>
                 </div>    
             </div>
@@ -121,9 +139,9 @@
                         <img class="pfp-picture" src="pfp/channel-5.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Tech and AI with Google CEO Sundar Pichai!</strong> </p>
-                        <p class="video-author">Marques Brownlee</p>
-                        <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                        <p class="video-title"><strong>TKadane's Algorithm to Maximum Sum Subarray Problem</strong> </p>
+                        <p class="video-author">CS Dojo</p>
+                        <p class="video-stats">519K views &#183; 5 years ago</p>
                     </div>
                 </div>
             </div>
@@ -137,9 +155,9 @@
                         <img class="pfp-picture" src="pfp/channel-6.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Not To Laugh Challenge #9</strong></p>
-                        <p class="video-author">Markiplier</p>
-                        <p class="video-stats">19M views &#183; 4 years ago</p>
+                        <p class="video-title"><strong>You Can Fit In The Circle I’ll Pay For</strong></p>
+                        <p class="video-author">MrBeast</p>
+                        <p class="video-stats">141M views &#183; 1 year ago</p>
                     </div>
                 </div>    
             </div>
@@ -153,9 +171,9 @@
                         <img class="pfp-picture" src="pfp/channel-7.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Tech and AI with Google CEO Sundar Pichai!</strong> </p>
-                        <p class="video-author">Marques Brownlee</p>
-                        <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                        <p class="video-title"><strong>Why Planes Don't Fly Over Tibet</strong> </p>
+                        <p class="video-author">RealLifeLore</p>
+                        <p class="video-stats">6.6M views &#183;  1 year ago</p>
                     </div>
                 </div>
             </div>
@@ -169,9 +187,9 @@
                         <img class="pfp-picture" src="pfp/channel-8.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Not To Laugh Challenge #9</strong></p>
-                        <p class="video-author">Markiplier</p>
-                        <p class="video-stats">19M views &#183; 4 years ago</p>
+                        <p class="video-title"><strong>Inside The World's Biggest Passenger Plane</strong></p>
+                        <p class="video-author">Tech Vision</p>
+                        <p class="video-stats">3.7M views &#183; 10 months ago</p>
                     </div>
                 </div>    
             </div>
@@ -185,9 +203,9 @@
                         <img class="pfp-picture" src="pfp/channel-9.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Tech and AI with Google CEO Sundar Pichai!</strong> </p>
-                        <p class="video-author">Marques Brownlee</p>
-                        <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                        <p class="video-title"><strong>The SECRET to Super Human STRENGTH</strong> </p>
+                        <p class="video-author">ThenX</p>
+                        <p class="video-stats">20M views &#183; 3 year ago</p>
                     </div>
                 </div>
             </div>
@@ -201,9 +219,9 @@
                         <img class="pfp-picture" src="pfp/channel-10.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Not To Laugh Challenge #9</strong></p>
-                        <p class="video-author">Markiplier</p>
-                        <p class="video-stats">19M views &#183; 4 years ago</p>
+                        <p class="video-title"><strong>How The World's Largest Cruise Ship Makes 30,000 Meals Every Day</strong></p>
+                        <p class="video-author">Business Insider</p>
+                        <p class="video-stats">14M views &#183; 1 year ago</p>
                     </div>
                 </div>    
             </div>
@@ -217,9 +235,9 @@
                         <img class="pfp-picture" src="pfp/channel-11.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Tech and AI with Google CEO Sundar Pichai!</strong> </p>
-                        <p class="video-author">Marques Brownlee</p>
-                        <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                        <p class="video-title"><strong>Dubai's Crazy Underwater Train and Other Things #Only in Dubai</strong> </p>
+                        <p class="video-author">Destination Tips</p>
+                        <p class="video-stats">3M views &#183; 1 year ago</p>
                     </div>
                 </div>
             </div>
@@ -233,9 +251,9 @@
                         <img class="pfp-picture" src="pfp/channel-12.jpeg">
                     </div>
                     <div class="video-info">
-                        <p class="video-title"><strong>Not To Laugh Challenge #9</strong></p>
-                        <p class="video-author">Markiplier</p>
-                        <p class="video-stats">19M views &#183; 4 years ago</p>
+                        <p class="video-title"><strong>What would happen if you didn’t drink water? - Mia Nacamulli</strong></p>
+                        <p class="video-author">TED-Ed</p>
+                        <p class="video-stats">12M views &#183; 5 years ago</p>
                     </div>
                 </div>    
             </div>
