--- a/index.html
+++ b/index.html
@@ -22,21 +22,32 @@
                 <input class = "searchbar" type="text" placeholder="Search">
                 <button class="search-button">
                     <img class="search-icon" src="svgs/search.svg" alt="">
+                    <div class="tooltip">Search</div>
                 </button>
                 <button class="voice-search-button">
                     <img src="svgs\voice-search-icon.svg" alt="">
+                    <div class="tooltip">Voice Search</div>
                 </button>
             </div>
             <div class="right-section">
+                <div class="upload-icon-container">
                     <img class="upload-icon" src="svgs\upload.svg" alt="">
+                    <div class="tooltip">Create</div>
+                </div>
 
+                <div class="youtube-apps-container">
                     <img class="youtube-apps-icon" src="svgs\youtube-apps.svg" alt="">
+                    <div class="tooltip">YouTube apps</div>
+                </div>
+                    
 
-                    <div class="notifications-icon-container">
-                        <img class="notifications-icon" src="svgs\notifications.svg" alt="">
-                        <div class="notifications-count">3</div>
-                    </div>
+                <div class="notifications-icon-container">
+                    <img class="notifications-icon" src="svgs\notifications.svg" alt="">
+                    <div class="notifications-count">3</div>
+                    <div class="tooltip">Notifications</div>
+                </div>
 
+                    
                     <img class="current-user-picture" src="pfp\channel-1.jpeg" alt="">
 
             </div>
@@ -67,7 +78,7 @@
         <div class="video-grid" style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-gap: 15px; row-gap: 40px;">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-1.webp">
+                    <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY"><img class = "thumbnail-1" src = "thumbnails/thumbnail-1.webp"></a>
                     <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid">
@@ -83,7 +94,7 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-2.webp">
+                    <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk"><img class = "thumbnail-1" src = "thumbnails/thumbnail-2.webp"></a>
                     <div class="video-time">8:22</div>
                 </div>
                 <div class="video-info-grid">
@@ -99,7 +110,9 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-3.webp">
+                    <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w">
+                        <img class = "thumbnail-1" src = "thumbnails/thumbnail-3.webp">
+                    </a>
                     <div class="video-time">9:13</div>
                 </div>
                 <div class="video-info-grid">
@@ -115,7 +128,7 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-4.webp">
+                    <a href="https://www.youtube.com/watch?v=094y1Z2wpJg"><img class = "thumbnail-1" src = "thumbnails/thumbnail-4.webp"></a>
                     <div class="video-time">22:09</div>
                 </div>
                 <div class="video-info-grid">
@@ -131,7 +144,7 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-5.webp">
+                    <a href="https://www.youtube.com/watch?v=86CQq3pKSUw"><img class = "thumbnail-1" src = "thumbnails/thumbnail-5.webp"></a>
                     <div class="video-time">11:17</div>
                 </div>
                 <div class="video-info-grid">
@@ -147,7 +160,7 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-6.webp">
+                    <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg"><img class = "thumbnail-1" src = "thumbnails/thumbnail-6.webp"></a>
                     <div class="video-time">19:59</div>
                 </div>
                 <div class="video-info-grid">
@@ -163,7 +176,7 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-7.webp">
+                    <a href="https://www.youtube.com/watch?v=fNVa1qMbF9Y"><img class = "thumbnail-1" src = "thumbnails/thumbnail-7.webp"></a>
                     <div class="video-time">10:13</div>
                 </div>
                 <div class="video-info-grid">
@@ -179,7 +192,7 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-8.webp">
+                    <a href="https://www.youtube.com/watch?v=lFm4EM1juls"><img class = "thumbnail-1" src = "thumbnails/thumbnail-8.webp"></a>
                     <div class="video-time">7:12</div>
                 </div>
                 <div class="video-info-grid">
@@ -195,7 +208,7 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-9.webp">
+                    <a href="https://www.youtube.com/watch?v=ixmxOlcrlUc"><img class = "thumbnail-1" src = "thumbnails/thumbnail-9.webp"></a>
                     <div class="video-time">13:17</div>
                 </div>
                 <div class="video-info-grid">
@@ -211,7 +224,7 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-10.webp">
+                    <a href="https://www.youtube.com/watch?v=R2vXbFp5C9o"><img class = "thumbnail-1" src = "thumbnails/thumbnail-10.webp"></a>
                     <div class="video-time">7:53</div>
                 </div>
                 <div class="video-info-grid">
@@ -227,7 +240,7 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-11.webp">
+                    <a href="https://www.youtube.com/watch?v=0nZuYyXET3s"><img class = "thumbnail-1" src = "thumbnails/thumbnail-11.webp"></a>
                     <div class="video-time">4:10</div>
                 </div>
                 <div class="video-info-grid">
@@ -243,7 +256,7 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row">
-                    <img class = "thumbnail-1" src = "thumbnails/thumbnail-12.webp">
+                    <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs"><img class = "thumbnail-1" src = "thumbnails/thumbnail-12.webp"></a>
                     <div class="video-time">4:51</div>
                 </div>
                 <div class="video-info-grid">
