--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
                 <div class="video-info-grid">
                     <div class="channel-img">
                         <img class="pfp-picture" src="pfp/channel-1.jpeg">
+                        <div class="channel-tooltip-container">
+                            <div><img class="pfp-picture" src="pfp/channel-1.jpeg"></div>
+                            <div>
+                                <p class="channel-hover-tooltips-title">Marques Brownlee</p><br>
+                                <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>Talking Tech and AI with Google CEO Sundar Pichai!</strong> </p>
@@ -100,6 +107,13 @@
                 <div class="video-info-grid">
                     <div class="channel-img">
                         <img class="pfp-picture" src="pfp/channel-2.jpeg">
+                        <div class="channel-tooltip-container">
+                            <div><img class="pfp-picture" src="pfp/channel-2.jpeg"></div>
+                            <div>
+                                <p class="channel-hover-tooltips-title">Markiplier</p><br>
+                                <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>Try Not To Laugh Challenge #9</strong></p>
@@ -118,6 +132,13 @@
                 <div class="video-info-grid">
                     <div class="channel-img">
                         <img class="pfp-picture" src="pfp/channel-3.jpeg">
+                        <div class="channel-tooltip-container">
+                            <div><img class="pfp-picture" src="pfp/channel-3.jpeg"></div>
+                            <div>
+                                <p class="channel-hover-tooltips-title">SSSniperWolf</p><br>
+                                <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>Crazy Tik Toks Taken Moments Before DISASTER</strong> </p>
@@ -134,6 +155,13 @@
                 <div class="video-info-grid">
                     <div class="channel-img">
                         <img class="pfp-picture" src="pfp/channel-4.jpeg">
+                        <div class="channel-tooltip-container">
+                            <div><img class="pfp-picture" src="pfp/channel-4.jpeg"></div>
+                            <div>
+                                <p class="channel-hover-tooltips-title">Veritasium</p><br>
+                                <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>The Simplest Math Problem No One Can Solve - Collatz Conjecture</strong></p>
@@ -150,6 +178,13 @@
                 <div class="video-info-grid">
                     <div class="channel-img">
                         <img class="pfp-picture" src="pfp/channel-5.jpeg">
+                        <div class="channel-tooltip-container">
+                            <div><img class="pfp-picture" src="pfp/channel-5.jpeg"></div>
+                            <div>
+                                <p class="channel-hover-tooltips-title">CS Dojo</p><br>
+                                <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>TKadane's Algorithm to Maximum Sum Subarray Problem</strong> </p>
@@ -166,6 +201,13 @@
                 <div class="video-info-grid">
                     <div class="channel-img">
                         <img class="pfp-picture" src="pfp/channel-6.jpeg">
+                        <div class="channel-tooltip-container">
+                            <div><img class="pfp-picture" src="pfp/channel-6.jpeg"></div>
+                            <div>
+                                <p class="channel-hover-tooltips-title">MrBeast</p><br>
+                                <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>You Can Fit In The Circle I’ll Pay For</strong></p>
@@ -182,6 +224,13 @@
                 <div class="video-info-grid">
                     <div class="channel-img">
                         <img class="pfp-picture" src="pfp/channel-7.jpeg">
+                        <div class="channel-tooltip-container">
+                            <div><img class="pfp-picture" src="pfp/channel-7.jpeg"></div>
+                            <div>
+                                <p class="channel-hover-tooltips-title">RealLifeLore</p><br>
+                                <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>Why Planes Don't Fly Over Tibet</strong> </p>
@@ -198,6 +247,13 @@
                 <div class="video-info-grid">
                     <div class="channel-img">
                         <img class="pfp-picture" src="pfp/channel-8.jpeg">
+                        <div class="channel-tooltip-container">
+                            <div><img class="pfp-picture" src="pfp/channel-8.jpeg"></div>
+                            <div>
+                                <p class="channel-hover-tooltips-title">Tech Vision</p><br>
+                                <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>Inside The World's Biggest Passenger Plane</strong></p>
@@ -214,6 +270,13 @@
                 <div class="video-info-grid">
                     <div class="channel-img">
                         <img class="pfp-picture" src="pfp/channel-9.jpeg">
+                        <div class="channel-tooltip-container">
+                            <div><img class="pfp-picture" src="pfp/channel-9.jpeg"></div>
+                            <div>
+                                <p class="channel-hover-tooltips-title">ThenX</p><br>
+                                <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>The SECRET to Super Human STRENGTH</strong> </p>
@@ -230,6 +293,13 @@
                 <div class="video-info-grid">
                     <div class="channel-img">
                         <img class="pfp-picture" src="pfp/channel-10.jpeg">
+                        <div class="channel-tooltip-container">
+                            <div><img class="pfp-picture" src="pfp/channel-10.jpeg"></div>
+                            <div>
+                                <p class="channel-hover-tooltips-title">Business Insider</p><br>
+                                <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>How The World's Largest Cruise Ship Makes 30,000 Meals Every Day</strong></p>
@@ -245,7 +315,16 @@
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
-                        <img class="pfp-picture" src="pfp/channel-11.jpeg">
+                        <div class="channel-tooltip">
+                            <img class="pfp-picture" src="pfp/channel-11.jpeg">
+                            <div class="channel-tooltip-container">
+                                <div><img class="pfp-picture" src="pfp/channel-11.jpeg"></div>
+                                <div>
+                                    <p class="channel-hover-tooltips-title">Destination Tips</p><br>
+                                    <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>Dubai's Crazy Underwater Train and Other Things #Only in Dubai</strong> </p>
@@ -261,7 +340,16 @@
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
-                        <img class="pfp-picture" src="pfp/channel-12.jpeg">
+                        <div>
+                            <img class="pfp-picture" src="pfp/channel-12.jpeg">
+                            <div class="channel-tooltip-container">
+                                <div><img class="pfp-picture" src="pfp/channel-12.jpeg"></div>
+                                <div>
+                                    <p class="channel-hover-tooltips-title">TED-Ed</p><br>
+                                    <p style="margin-top: 2px;" class="channel-hover-tooltips">3M Subscibers</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="video-info">
                         <p class="video-title"><strong>What would happen if you didn’t drink water? - Mia Nacamulli</strong></p>
